depends_compile_tests/tests/fail/derive/dependencies/generics.rs
use depends::derives::Dependencies;

#[derive(Dependencies)]
struct Bar<A, B> {
    node1: A,
    node2: B,
}

fn main() {}
